cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/BQ030_Issues_Others__c.field-meta.xml
<CustomField>
    <fullName>BQ030_Issues_Others__c</fullName>
    <formula>IF(ISNULL(Issues_Others__c ), &quot;&quot;, IF( ISBLANK(Issues_Others__c) , &quot;98&quot;, SUBSTITUTE(
Issues_Others__c ,
Issues_Others__c , &quot;99&quot;)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BQ030_Issues_Others</label>
    <type>Text</type>
</CustomField>