cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/BQ030_Issues_with_Sales_Consultant__c.field-meta.xml
<CustomField>
    <fullName>BQ030_Issues_with_Sales_Consultant__c</fullName>
    <formula>IF(ISNULL(Issues_with_Sales_Consultant__c), &quot;&quot;, IF( ISBLANK(Issues_with_Sales_Consultant__c), &quot;&quot;, LEFT(IF( CONTAINS(Issues_with_Sales_Consultant__c, &quot;Waiting time before being greeted&quot;), &quot;6, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Sales_Consultant__c, &quot;Insufficient effort to understand my needs&quot;), &quot;7, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Sales_Consultant__c, &quot;Did not seem knowledgeable&quot;), &quot;8, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Sales_Consultant__c, &quot;Tried to pressure me&quot;), &quot;9, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Sales_Consultant__c, &quot;Was rude&quot;), &quot;10, &quot;, &quot;&quot;), LEN(IF( CONTAINS(Issues_with_Sales_Consultant__c, &quot;Waiting time before being greeted&quot;), &quot;6, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Sales_Consultant__c, &quot;Insufficient effort to understand my needs&quot;), &quot;7, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Sales_Consultant__c, &quot;Did not seem knowledgeable&quot;), &quot;8, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Sales_Consultant__c, &quot;Tried to pressure me&quot;), &quot;9, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Sales_Consultant__c, &quot;Was rude&quot;), &quot;10, &quot;, &quot;&quot;)) - 2) +

IF( NOT(CONTAINS(Issues_with_Sales_Consultant__c, &quot;Waiting time before being greeted&quot;)) &amp;&amp;
NOT(CONTAINS(Issues_with_Sales_Consultant__c, &quot;Insufficient effort to understand my needs&quot;)) &amp;&amp;
NOT(CONTAINS(Issues_with_Sales_Consultant__c, &quot;Did not seem knowledgeable&quot;)) &amp;&amp;
NOT(CONTAINS(Issues_with_Sales_Consultant__c, &quot;Tried to pressure me&quot;)) &amp;&amp;
NOT(CONTAINS(Issues_with_Sales_Consultant__c, &quot;Was rude&quot;)), IF(NOT(ISNUMBER(RIGHT(SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
Issues_with_Sales_Consultant__c,
&quot;Waiting time before being greeted&quot;, &quot;6&quot;),
&quot;Insufficient effort to understand my needs&quot;, &quot;7&quot;),
&quot;Did not seem knowledgeable&quot;, &quot;8&quot;),
&quot;Tried to pressure me&quot;, &quot;9&quot;),
&quot;Was rude&quot;, &quot;10&quot;), 2))), &quot;11&quot;, &quot;&quot;), IF(NOT(ISNUMBER(RIGHT(SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
Issues_with_Sales_Consultant__c,
&quot;Waiting time before being greeted&quot;, &quot;6&quot;),
&quot;Insufficient effort to understand my needs&quot;, &quot;7&quot;),
&quot;Did not seem knowledgeable&quot;, &quot;8&quot;),
&quot;Tried to pressure me&quot;, &quot;9&quot;),
&quot;Was rude&quot;, &quot;10&quot;), 2))), &quot;, 11&quot;, &quot;&quot;)) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BQ030_Issues_with_Sales_Consultant</label>
    <type>Text</type>
</CustomField>