cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/BQ030_Issues_with_Vehicle_Purchase__c.field-meta.xml
<CustomField>
    <fullName>BQ030_Issues_with_Vehicle_Purchase__c</fullName>
    <formula>IF(ISNULL(Issues_with_Vehicle_Purchase__c), &quot;&quot;, IF(ISBLANK(Issues_with_Vehicle_Purchase__c ), &quot;&quot;,  LEFT(IF( CONTAINS(Issues_with_Vehicle_Purchase__c , &quot;Negotiation took too long&quot;), &quot;16, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Vehicle_Purchase__c, &quot;Financing took too long&quot;), &quot;17, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Vehicle_Purchase__c, &quot;Paperwork was unclear&quot;), &quot;18, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Vehicle_Purchase__c, &quot;Sales Consultant tried to sell me items I didn&apos;t want&quot;), &quot;19, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Vehicle_Purchase__c, &quot;Had to return to Cycle &amp; Carriage to fix paperwork&quot;), &quot;20, &quot;, &quot;&quot;), LEN(IF( CONTAINS(Issues_with_Vehicle_Purchase__c , &quot;Negotiation took too long&quot;), &quot;16, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Vehicle_Purchase__c, &quot;Financing took too long&quot;), &quot;17, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Vehicle_Purchase__c, &quot;Paperwork was unclear&quot;), &quot;18, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Vehicle_Purchase__c, &quot;Sales Consultant tried to sell me items I didn&apos;t want&quot;), &quot;19, &quot;, &quot;&quot;) +
IF( CONTAINS(Issues_with_Vehicle_Purchase__c, &quot;Had to return to Cycle &amp; Carriage to fix paperwork&quot;), &quot;20, &quot;, &quot;&quot;)) - 2) + 

IF( NOT(CONTAINS(Issues_with_Vehicle_Purchase__c , &quot;Negotiation took too long&quot;)) &amp;&amp;
NOT(CONTAINS(Issues_with_Vehicle_Purchase__c, &quot;Financing took too long&quot;)) &amp;&amp;
NOT(CONTAINS(Issues_with_Vehicle_Purchase__c, &quot;Paperwork was unclear&quot;)) &amp;&amp;
NOT(CONTAINS(Issues_with_Vehicle_Purchase__c, &quot;Sales Consultant tried to sell me items I didn&apos;t want&quot;)) &amp;&amp;
NOT(CONTAINS(Issues_with_Vehicle_Purchase__c, &quot;Had to return to Cycle &amp; Carriage to fix paperwork&quot;)) , IF(NOT(ISNUMBER(RIGHT(SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
Issues_with_Vehicle_Purchase__c,
&quot;Negotiation took too long&quot;, &quot;16&quot;),
&quot;Financing took too long&quot;, &quot;17&quot;),
&quot;Paperwork was unclear&quot;, &quot;18&quot;),
&quot;Sales Consultant tried to sell me items I didn&apos;t want&quot;, &quot;19&quot;),
&quot;Had to return to Cycle &amp; Carriage to fix paperwork&quot;, &quot;20&quot;), 2))),&quot;21&quot;, &quot;&quot;),IF(NOT(ISNUMBER(RIGHT(SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
Issues_with_Vehicle_Purchase__c,
&quot;Negotiation took too long&quot;, &quot;16&quot;),
&quot;Financing took too long&quot;, &quot;17&quot;),
&quot;Paperwork was unclear&quot;, &quot;18&quot;),
&quot;Sales Consultant tried to sell me items I didn&apos;t want&quot;, &quot;19&quot;),
&quot;Had to return to Cycle &amp; Carriage to fix paperwork&quot;, &quot;20&quot;), 2))), &quot;, 21&quot;, &quot;&quot;))))</formula>
    <label>BQ030_Issues_with_Vehicle_Purchase</label>
    <type>Text</type>
</CustomField>