cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <formula>TEXT(Sales_Agreement__r.Branch_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Code</label>
    <type>Text</type>
</CustomField>