cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/Chassis_No__c.field-meta.xml
<CustomField>
    <fullName>Chassis_No__c</fullName>
    <formula>Sales_Agreement__r.Chassis_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chassis No</label>
    <type>Text</type>
</CustomField>