cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/Complaint_Category__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Category__c</fullName>
    <label>Complaint Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Consultant Service</fullName>
            </value>
            <value>
                <fullName>Pricing &amp; Promotions</fullName>
            </value>
            <value>
                <fullName>Paperwork &amp; Financing Process</fullName>
            </value>
            <value>
                <fullName>Delivery Experience</fullName>
            </value>
            <value>
                <fullName>Showroom Facility</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>