cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/DQ010__c.field-meta.xml
<CustomField>
    <fullName>DQ010__c</fullName>
    <formula>IF(ISPICKVAL(Sales_Agreement__r.Gender__c, &quot;M&quot;), 1, IF( ISPICKVAL(Sales_Agreement__r.Gender__c, &quot;F&quot;), 2, 3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DQ010</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>