cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/DQ020__c.field-meta.xml
<CustomField>
    <fullName>DQ020__c</fullName>
    <formula>IF( ROUND(((TODAY() -  Sales_Agreement__r.Date_Of_Birth__c) / 365), 0) &lt; 20, 1,
IF( 20 &lt;= ROUND(((TODAY() -  Sales_Agreement__r.Date_Of_Birth__c) / 365), 0) &amp;&amp;  ROUND(((TODAY() - Sales_Agreement__r.Date_Of_Birth__c) / 365), 0) &lt;= 29, 2,
IF( 30 &lt;= ROUND(((TODAY() -  Sales_Agreement__r.Date_Of_Birth__c) / 365), 0) &amp;&amp; ROUND(((TODAY() - Sales_Agreement__r.Date_Of_Birth__c) / 365), 0) &lt;= 39, 3, 
IF( 40 &lt;= ROUND(((TODAY() -  Sales_Agreement__r.Date_Of_Birth__c) / 365), 0) &amp;&amp; ROUND(((TODAY() - Sales_Agreement__r.Date_Of_Birth__c) / 365), 0) &lt;= 49, 4, 
IF( 50 &lt;= ROUND(((TODAY() -  Sales_Agreement__r.Date_Of_Birth__c) / 365), 0) &amp;&amp; ROUND(((TODAY() - Sales_Agreement__r.Date_Of_Birth__c) / 365), 0) &lt;= 59, 5, 
IF( 60 &lt;= ROUND(((TODAY() -  Sales_Agreement__r.Date_Of_Birth__c) / 365), 0), 6, 7))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DQ020</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>