cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/Former_Car_Brand__c.field-meta.xml
<CustomField>
    <fullName>Former_Car_Brand__c</fullName>
    <inlineHelpText>What was your previous brand before purchasing your current Kia?</inlineHelpText>
    <label>Former Car Brand</label>
    <length>200</length>
    <type>Text</type>
</CustomField>