cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/Issue_or_Discomfort_During_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Issue_or_Discomfort_During_Purchase__c</fullName>
    <inlineHelpText>Did you have any issue or discomfort during your car purchase experience?</inlineHelpText>
    <label>Issue or Discomfort During Purchase</label>
    <type>TextArea</type>
</CustomField>