cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/Issues_with_Test_Drive__c.field-meta.xml
<CustomField>
    <fullName>Issues_with_Test_Drive__c</fullName>
    <inlineHelpText>What issues did you experience during your test drive?</inlineHelpText>
    <label>Issues with Test Drive</label>
    <type>TextArea</type>
</CustomField>