cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/Issues_with_Vehicle_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Issues_with_Vehicle_Purchase__c</fullName>
    <inlineHelpText>What issues did you experience during vehicle purchase?</inlineHelpText>
    <label>Issues with Vehicle Purchase</label>
    <type>TextArea</type>
</CustomField>