cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <formula>IF(TEXT(Sales_Agreement__r.Branch_Code__c )  = &apos;CCK&apos; , &apos;aodigyprojects@gmail.com&apos;, IF(TEXT(Sales_Agreement__r.Branch_Code__c ) = &apos;CCF&apos;, &apos;aodigyprojects@gmail.com&apos;, &apos;aodigyprojects@gmail.com&apos;) )</formula>
    <label>Manager Email</label>
    <type>Text</type>
</CustomField>