cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/Negative_Survey__c.field-meta.xml
<CustomField>
    <fullName>Negative_Survey__c</fullName>
    <formula>NPS__c &lt; 8</formula>
    <label>Negative Survey</label>
    <type>Checkbox</type>
</CustomField>