cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/Overall_Purchase_Experience__c.field-meta.xml
<CustomField>
    <fullName>Overall_Purchase_Experience__c</fullName>
    <inlineHelpText>How would you rate your overall purchase experience at Cycle &amp; Carriage?</inlineHelpText>
    <label>Overall Purchase Experience</label>
    <length>200</length>
    <type>Text</type>
</CustomField>