cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/Permission_to_Contact_Customer__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_Contact_Customer__c</fullName>
    <inlineHelpText>Would you give your consent if Cycle &amp; Carriage wish to contact you regarding your feedback?</inlineHelpText>
    <label>Permission to Contact Customer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>