cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/Reasons_for_uncertainty_CNC_Aftersales__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_uncertainty_CNC_Aftersales__c</fullName>
    <inlineHelpText>Please let us know why you are uncertain whether you would return to Cycle &amp; Carriage for servicing in the future.</inlineHelpText>
    <label>Reasons for uncertainty CNC Aftersales</label>
    <type>TextArea</type>
</CustomField>