cncProd/force-app/main/default/objects/GFB_Kia_DCSI_Sales_Survey__c/fields/Sales_Consultant_Strength__c.field-meta.xml
<CustomField>
    <fullName>Sales_Consultant_Strength__c</fullName>
    <label>Sales Consultant Strength</label>
    <type>TextArea</type>
</CustomField>